--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.14.0",
     "method-override": "^2.3.6",
     "pg": "^6.1.0",
-    "sequelize": "^3.24.1"
+    "sequelize": "^3.24.1",
+    "swig": "^1.4.2"
   }
 }
